Expose VOL optimization workflow
